--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   
   <head>
+    <link rel="stylesheet" href="setup.css">
+    <script src="quiz1.js" type="text/javascript"></script>
   </head>
   
   <body>
