--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <link rel="stylesheet" href="setup.css">
-    <script src="quiz1.js" type="text/javascript"></script>
+    <script type="text/javascript" src="quiz1.js"></script>
   </head>
   
   <body>
