--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <body>
 
-    <h1>Quiz on Important Facts</h1>
+    <h1>SpongeBob QuizPants</h1>
     <div class="quiz-container">
       <div id="quiz"></div>
     </div>
