--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
     <button id="next">Next Question</button>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
-	<div class="sidebar">
-    <div>Home</div>
-	<div>SpongeBob SquarePants</div>
-    <div>Patrick Star</div>
-    <div>Squidward Tentacles</div>
-	<div>Mr. Krabs</div>
-    <div>Plankton and Karen</div>
-    <div>Sandy Cheeks</div>
-	<div>Mrs. Puff</div>
-    <div>Pearl</div>
-    <div>Gary the Snail</div>
+    <div class="sidebar">
+      <a href="\spongebob.html">
+      <div>
+        SpongeBob SquarePants
+      </div>
+      </a>
+      <div>Patrick Star</div>
+      <div>Squidward Tentacles</div>
+      <div>Mr. Krabs</div>
+      <div>Plankton and Karen</div>
+      <div>Sandy Cheeks</div>
+      <div>Mrs. Puff</div>
+      <div>Pearl</div>
+      <div>Gary the Snail</div>
     </div>
     <script type="text/javascript" src="quiz1.js"></script>
   
