--- a/spongebob.html
+++ b/spongebob.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <link rel="stylesheet" href="setup.css">
+    <link rel="stylesheet" href="quiz.css">
   </head>
   
   <body>
@@ -15,19 +15,59 @@
     <button id="next">Next Question</button>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
-	  <div class="sidebar">
-      <div>Home</div>
-	    <div>SpongeBob SquarePants</div>
-      <div>Patrick Star</div>
-      <div>Squidward Tentacles</div>
-	    <div>Mr. Krabs</div>
-      <div>Plankton and Karen</div>
-      <div>Sandy Cheeks</div>
-	    <div>Mrs. Puff</div>
-      <div>Pearl</div>
-      <div>Gary the Snail</div>
-  </div>
-  <script type="text/javascript" src="quiz1.js"></script>
+    <div class="sidebar">
+      <a href="\index.html">
+      <div>
+        Home	
+      </div>
+      </a>
+      <a href="\spongebob.html">
+      <div>
+        SpongeBob SquarePants	
+      </div>
+      </a>
+       <a href="\patrick.html">
+      <div>
+        Patrick Star	
+      </div>
+      </a>
+       <a href="\squidward.html">
+      <div>
+        Squidward Tentacles
+      </div>
+      </a>
+       <a href="\krabs.html">
+      <div>
+        Mr. Krabs	
+      </div>
+      </a>
+       <a href="\plank.html">
+      <div>
+        Plankton and Karen
+      </div>
+      </a>
+       <a href="\sandy.html">
+      <div>
+        Sandy Cheeks	
+      </div>
+      </a>
+       <a href="\puff.html">
+      <div>
+        Mrs. Puff	
+      </div>
+      </a>
+       <a href="\pearl.html">
+      <div>
+        Pearl	
+      </div>
+      </a>
+       <a href="\gary.html">
+      <div>
+        Gary the Snail	
+      </div>
+      </a>
+    </div>
+    <script type="text/javascript" src="spongebob.js"></script>
   
   </body>
 </html>
