--- a/puff.html
+++ b/puff.html
@@ -7,7 +7,7 @@
   
   <body>
 
-    <h1>SpongeBob SquarePants</h1>
+    <h1>Mrs. Puff</h1>
     <div class="quiz-container">
       <div id="quiz"></div>
     </div>
@@ -67,7 +67,7 @@
       </div>
       </a>
     </div>
-    <script type="text/javascript" src="spongebob.js"></script>
+    <script type="text/javascript" src="puff.js"></script>
   
   </body>
 </html>
