--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       </div>
       </a>
     </div>
+	<div> Welcome to the SpongeBob Squarepants Quiz! Please click on a character in the menu to get started</div>
   
   </body>
 </html>
